--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*"
-		"doctrine/dbal"
+		"laravel/framework": "4.1.*",
+		"doctrine/dbal": "2.3.4",
+		"bkwld/croppa": "~3.0"
 	},
 	"autoload": {
 		"classmap": [
