--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
 		"doctrine/dbal": "2.3.4",
 		"bkwld/croppa": "~3.0"
 	},
+  "require-dev": {
+      "phpspec/phpspec": "2.0.*@dev"
+  },
 	"autoload": {
 		"classmap": [
 			"app/commands",
